MyScrapsApp First Commit

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using io.js <script>document.write(process.version)</script>
-    and Electron <script>document.write(process.versions['electron'])</script>.
+    <section id="myscrapsapp"></section>
+    <script style="text/javascript" src="/js/main.js" ></script>
   </body>
 </html>
